etc/helm/pachyderm/envoy.json
{
   "admin": {
      "access_log": [
         {
            "filter": {
               "or_filter": {
                  "filters": [
                     {
                        "or_filter": {
                           "filters": [
                              {
                                 "status_code_filter": {
                                    "comparison": {
                                       "op": "le",
                                       "value": {
                                          "default_value": 199,
                                          "runtime_key": "invalid.ignore_kubeprobe_response_code"
                                       }
                                    }
                                 }
                              },
                              {
                                 "status_code_filter": {
                                    "comparison": {
                                       "op": "ge",
                                       "value": {
                                          "default_value": 300,
                                          "runtime_key": "invalid.ignore_kubeprobe_response_code"
                                       }
                                    }
                                 }
                              }
                           ]
                        }
                     },
                     {
                        "header_filter": {
                           "header": {
                              "invert_match": true,
                              "name": "user-agent",
                              "string_match": {
                                 "prefix": "kube-probe/"
                              }
                           }
                        }
                     }
                  ]
               }
            },
            "name": "envoy.access_loggers.stdout",
            "typed_config": {
               "@type": "type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StderrAccessLog",
               "log_format": {
                  "json_format": {
                     "authority": "%REQ(authority)%",
                     "connection_id": "%CONNECTION_ID%",
                     "connection_termination_details": "%CONNECTION_TERMINATION_DETAILS%",
                     "downstream_remote_address": "%DOWNSTREAM_DIRECT_REMOTE_ADDRESS_WITHOUT_PORT%",
                     "duration_ms": "%DURATION%",
                     "grpc_message": "%RESP(GRPC-MESSAGE):64%",
                     "grpc_status_code": "%GRPC_STATUS(SNAKE_STRING)%",
                     "message": "admin response",
                     "method": "%REQ(:method)%",
                     "pachctl_command": "%REQ(COMMAND):64%",
                     "path": "%REQ(X-ENVOY-ORIGINAL-PATH?:PATH)%",
                     "protocol": "%PROTOCOL%",
                     "request_attempt_count": "%UPSTREAM_REQUEST_ATTEMPT_COUNT%",
                     "request_headers_bytes": "%REQUEST_HEADERS_BYTES%",
                     "response_code": "%RESPONSE_CODE%",
                     "response_code_details": "%RESPONSE_CODE_DETAILS%",
                     "response_flags": "%RESPONSE_FLAGS%",
                     "route": "%ROUTE_NAME%",
                     "rx_bytes": "%BYTES_RECEIVED%",
                     "severity": "info",
                     "stream_id": "%STREAM_ID%",
                     "timestamp": "%START_TIME%",
                     "tx_bytes": "%BYTES_SENT%",
                     "upgrade": "%RESP(UPGRADE)%",
                     "upstream": "%UPSTREAM_CLUSTER%",
                     "upstream_host": "%UPSTREAM_HOST%",
                     "upstream_local_address": "%UPSTREAM_LOCAL_ADDRESS%",
                     "upstream_protocol": "%UPSTREAM_PROTOCOL%",
                     "upstream_service_time_ms": "%RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)%",
                     "user_agent": "%REQ(USER-AGENT)%",
                     "x-request-id": "%REQ(X-REQUEST-ID)%",
                     "xff": "%REQ(X-FORWARDED-FOR)%"
                  },
                  "omit_empty_values": true
               }
            }
         }
      ],
      "address": {
         "socket_address": {
            "address": "0.0.0.0",
            "port_value": 9901
         }
      }
   },
   "layered_runtime": {
      "layers": [
         {
            "name": "static_layer_0",
            "static_layer": {
               "overload": {
                  "global_downstream_max_connections": 50000
               }
            }
         }
      ]
   },
   "overload_manager": {
      "actions": [
         {
            "name": "envoy.overload_actions.shrink_heap",
            "triggers": [
               {
                  "name": "envoy.resource_monitors.fixed_heap",
                  "threshold": {
                     "value": 0.94999999999999996
                  }
               }
            ]
         },
         {
            "name": "envoy.overload_actions.stop_accepting_requests",
            "triggers": [
               {
                  "name": "envoy.resource_monitors.fixed_heap",
                  "threshold": {
                     "value": 0.97999999999999998
                  }
               }
            ]
         }
      ],
      "refresh_interval": "0.25s",
      "resource_monitors": [
         {
            "name": "envoy.resource_monitors.fixed_heap",
            "typed_config": {
               "@type": "type.googleapis.com/envoy.extensions.resource_monitors.fixed_heap.v3.FixedHeapConfig",
               "max_heap_size_bytes": 500000000
            }
         }
      ]
   },
   "static_resources": {
      "clusters": [
         {
            "connect_timeout": "10s",
            "dns_failure_refresh_rate": {
               "base_interval": "0.05s",
               "max_interval": "0.1s"
            },
            "dns_lookup_family": "V4_ONLY",
            "dns_refresh_rate": "5s",
            "health_checks": [
               {
                  "healthy_threshold": 1,
                  "http_health_check": {
                     "host": "localhost",
                     "path": "/"
                  },
                  "interval": "30s",
                  "no_traffic_healthy_interval": "10s",
                  "no_traffic_interval": "10s",
                  "timeout": "10s",
                  "unhealthy_threshold": 2
               }
            ],
            "lb_policy": "random",
            "load_assignment": {
               "cluster_name": "console",
               "endpoints": [
                  {
                     "lb_endpoints": [
                        {
                           "endpoint": {
                              "address": {
                                 "socket_address": {
                                    "address": "console-proxy-backend",
                                    "port_value": 4000
                                 }
                              }
                           }
                        }
                     ]
                  }
               ]
            },
            "name": "console",
            "transport_socket": {
               "name": "envoy.transport_sockets.tap",
               "typed_config": {
                  "@type": "type.googleapis.com/envoy.extensions.transport_sockets.tap.v3.Tap",
                  "common_config": {
                     "admin_config": {
                        "config_id": "tap-cluster-console"
                     }
                  },
                  "transport_socket": {
                     "name": "envoy.transport_sockets.raw_buffer",
                     "typed_config": {
                        "@type": "type.googleapis.com/envoy.extensions.transport_sockets.raw_buffer.v3.RawBuffer"
                     }
                  }
               }
            },
            "type": "strict_dns",
            "upstream_connection_options": {
               "tcp_keepalive": { }
            }
         },
         {
            "connect_timeout": "10s",
            "dns_failure_refresh_rate": {
               "base_interval": "0.05s",
               "max_interval": "0.1s"
            },
            "dns_lookup_family": "V4_ONLY",
            "dns_refresh_rate": "5s",
            "health_checks": [
               {
                  "healthy_threshold": 1,
                  "http_health_check": {
                     "host": "localhost",
                     "path": "/healthz"
                  },
                  "interval": "30s",
                  "no_traffic_healthy_interval": "10s",
                  "no_traffic_interval": "10s",
                  "timeout": "10s",
                  "unhealthy_threshold": 2
               }
            ],
            "lb_policy": "random",
            "load_assignment": {
               "cluster_name": "pachd-archive",
               "endpoints": [
                  {
                     "lb_endpoints": [
                        {
                           "endpoint": {
                              "address": {
                                 "socket_address": {
                                    "address": "pachd-proxy-backend",
                                    "port_value": 1659
                                 }
                              }
                           }
                        }
                     ]
                  }
               ]
            },
            "name": "pachd-archive",
            "transport_socket": {
               "name": "envoy.transport_sockets.tap",
               "typed_config": {
                  "@type": "type.googleapis.com/envoy.extensions.transport_sockets.tap.v3.Tap",
                  "common_config": {
                     "admin_config": {
                        "config_id": "tap-cluster-pachd-archive"
                     }
                  },
                  "transport_socket": {
                     "name": "envoy.transport_sockets.raw_buffer",
                     "typed_config": {
                        "@type": "type.googleapis.com/envoy.extensions.transport_sockets.raw_buffer.v3.RawBuffer"
                     }
                  }
               }
            },
            "type": "strict_dns",
            "upstream_connection_options": {
               "tcp_keepalive": { }
            }
         },
         {
            "connect_timeout": "10s",
            "dns_failure_refresh_rate": {
               "base_interval": "0.05s",
               "max_interval": "0.1s"
            },
            "dns_lookup_family": "V4_ONLY",
            "dns_refresh_rate": "5s",
            "health_checks": [
               {
                  "grpc_health_check": { },
                  "healthy_threshold": 1,
                  "interval": "10s",
                  "no_traffic_healthy_interval": "10s",
                  "no_traffic_interval": "10s",
                  "timeout": "10s",
                  "unhealthy_threshold": 2
               }
            ],
            "lb_policy": "random",
            "load_assignment": {
               "cluster_name": "pachd-grpc",
               "endpoints": [
                  {
                     "lb_endpoints": [
                        {
                           "endpoint": {
                              "address": {
                                 "socket_address": {
                                    "address": "pachd-proxy-backend",
                                    "port_value": 1650
                                 }
                              }
                           }
                        }
                     ]
                  }
               ]
            },
            "name": "pachd-grpc",
            "transport_socket": {
               "name": "envoy.transport_sockets.tap",
               "typed_config": {
                  "@type": "type.googleapis.com/envoy.extensions.transport_sockets.tap.v3.Tap",
                  "common_config": {
                     "admin_config": {
                        "config_id": "tap-cluster-pachd-grpc"
                     }
                  },
                  "transport_socket": {
                     "name": "envoy.transport_sockets.raw_buffer",
                     "typed_config": {
                        "@type": "type.googleapis.com/envoy.extensions.transport_sockets.raw_buffer.v3.RawBuffer"
                     }
                  }
               }
            },
            "type": "strict_dns",
            "typed_extension_protocol_options": {
               "envoy.extensions.upstreams.http.v3.HttpProtocolOptions": {
                  "@type": "type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions",
                  "explicit_http_config": {
                     "http2_protocol_options": { }
                  }
               }
            },
            "upstream_connection_options": {
               "tcp_keepalive": { }
            }
         },
         {
            "connect_timeout": "10s",
            "dns_failure_refresh_rate": {
               "base_interval": "0.05s",
               "max_interval": "0.1s"
            },
            "dns_lookup_family": "V4_ONLY",
            "dns_refresh_rate": "5s",
            "health_checks": [
               {
                  "healthy_threshold": 1,
                  "http_health_check": {
                     "host": "localhost",
                     "path": "/dex/.well-known/openid-configuration"
                  },
                  "interval": "30s",
                  "no_traffic_healthy_interval": "10s",
                  "no_traffic_interval": "10s",
                  "timeout": "10s",
                  "unhealthy_threshold": 2
               }
            ],
            "lb_policy": "random",
            "load_assignment": {
               "cluster_name": "pachd-identity",
               "endpoints": [
                  {
                     "lb_endpoints": [
                        {
                           "endpoint": {
                              "address": {
                                 "socket_address": {
                                    "address": "pachd-proxy-backend",
                                    "port_value": 1658
                                 }
                              }
                           }
                        }
                     ]
                  }
               ]
            },
            "name": "pachd-identity",
            "transport_socket": {
               "name": "envoy.transport_sockets.tap",
               "typed_config": {
                  "@type": "type.googleapis.com/envoy.extensions.transport_sockets.tap.v3.Tap",
                  "common_config": {
                     "admin_config": {
                        "config_id": "tap-cluster-pachd-identity"
                     }
                  },
                  "transport_socket": {
                     "name": "envoy.transport_sockets.raw_buffer",
                     "typed_config": {
                        "@type": "type.googleapis.com/envoy.extensions.transport_sockets.raw_buffer.v3.RawBuffer"
                     }
                  }
               }
            },
            "type": "strict_dns",
            "upstream_connection_options": {
               "tcp_keepalive": { }
            }
         },
         {
            "connect_timeout": "10s",
            "dns_failure_refresh_rate": {
               "base_interval": "0.05s",
               "max_interval": "0.1s"
            },
            "dns_lookup_family": "V4_ONLY",
            "dns_refresh_rate": "5s",
            "health_checks": [ ],
            "lb_policy": "random",
            "load_assignment": {
               "cluster_name": "pachd-metrics",
               "endpoints": [
                  {
                     "lb_endpoints": [
                        {
                           "endpoint": {
                              "address": {
                                 "socket_address": {
                                    "address": "pachd-proxy-backend",
                                    "port_value": 1656
                                 }
                              }
                           }
                        }
                     ]
                  }
               ]
            },
            "name": "pachd-metrics",
            "transport_socket": {
               "name": "envoy.transport_sockets.tap",
               "typed_config": {
                  "@type": "type.googleapis.com/envoy.extensions.transport_sockets.tap.v3.Tap",
                  "common_config": {
                     "admin_config": {
                        "config_id": "tap-cluster-pachd-metrics"
                     }
                  },
                  "transport_socket": {
                     "name": "envoy.transport_sockets.raw_buffer",
                     "typed_config": {
                        "@type": "type.googleapis.com/envoy.extensions.transport_sockets.raw_buffer.v3.RawBuffer"
                     }
                  }
               }
            },
            "type": "strict_dns",
            "upstream_connection_options": {
               "tcp_keepalive": { }
            }
         },
         {
            "connect_timeout": "10s",
            "dns_failure_refresh_rate": {
               "base_interval": "0.05s",
               "max_interval": "0.1s"
            },
            "dns_lookup_family": "V4_ONLY",
            "dns_refresh_rate": "5s",
            "health_checks": [
               {
                  "healthy_threshold": 1,
                  "http_health_check": {
                     "host": "localhost",
                     "path": "/"
                  },
                  "interval": "30s",
                  "no_traffic_healthy_interval": "10s",
                  "no_traffic_interval": "10s",
                  "timeout": "10s",
                  "unhealthy_threshold": 2
               }
            ],
            "lb_policy": "random",
            "load_assignment": {
               "cluster_name": "pachd-oidc",
               "endpoints": [
                  {
                     "lb_endpoints": [
                        {
                           "endpoint": {
                              "address": {
                                 "socket_address": {
                                    "address": "pachd-proxy-backend",
                                    "port_value": 1657
                                 }
                              }
                           }
                        }
                     ]
                  }
               ]
            },
            "name": "pachd-oidc",
            "transport_socket": {
               "name": "envoy.transport_sockets.tap",
               "typed_config": {
                  "@type": "type.googleapis.com/envoy.extensions.transport_sockets.tap.v3.Tap",
                  "common_config": {
                     "admin_config": {
                        "config_id": "tap-cluster-pachd-oidc"
                     }
                  },
                  "transport_socket": {
                     "name": "envoy.transport_sockets.raw_buffer",
                     "typed_config": {
                        "@type": "type.googleapis.com/envoy.extensions.transport_sockets.raw_buffer.v3.RawBuffer"
                     }
                  }
               }
            },
            "type": "strict_dns",
            "upstream_connection_options": {
               "tcp_keepalive": { }
            }
         },
         {
            "connect_timeout": "10s",
            "dns_failure_refresh_rate": {
               "base_interval": "0.05s",
               "max_interval": "0.1s"
            },
            "dns_lookup_family": "V4_ONLY",
            "dns_refresh_rate": "5s",
            "health_checks": [ ],
            "lb_policy": "random",
            "load_assignment": {
               "cluster_name": "pachd-s3",
               "endpoints": [
                  {
                     "lb_endpoints": [
                        {
                           "endpoint": {
                              "address": {
                                 "socket_address": {
                                    "address": "pachd-proxy-backend",
                                    "port_value": 1600
                                 }
                              }
                           }
                        }
                     ]
                  }
               ]
            },
            "name": "pachd-s3",
            "transport_socket": {
               "name": "envoy.transport_sockets.tap",
               "typed_config": {
                  "@type": "type.googleapis.com/envoy.extensions.transport_sockets.tap.v3.Tap",
                  "common_config": {
                     "admin_config": {
                        "config_id": "tap-cluster-pachd-s3"
                     }
                  },
                  "transport_socket": {
                     "name": "envoy.transport_sockets.raw_buffer",
                     "typed_config": {
                        "@type": "type.googleapis.com/envoy.extensions.transport_sockets.raw_buffer.v3.RawBuffer"
                     }
                  }
               }
            },
            "type": "strict_dns",
            "upstream_connection_options": {
               "tcp_keepalive": { }
            }
         }
      ],
      "listeners": [
         {
            "access_log": [
               {
                  "name": "envoy.access_loggers.stdout",
                  "typed_config": {
                     "@type": "type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StderrAccessLog",
                     "log_format": {
                        "json_format": {
                           "authority": "%REQ(authority)%",
                           "connection_id": "%CONNECTION_ID%",
                           "connection_termination_details": "%CONNECTION_TERMINATION_DETAILS%",
                           "downstream_remote_address": "%DOWNSTREAM_DIRECT_REMOTE_ADDRESS_WITHOUT_PORT%",
                           "duration_ms": "%DURATION%",
                           "grpc_message": "%RESP(GRPC-MESSAGE):64%",
                           "grpc_status_code": "%GRPC_STATUS(SNAKE_STRING)%",
                           "listener": "proxy-http",
                           "message": "listener log",
                           "method": "%REQ(:method)%",
                           "pachctl_command": "%REQ(COMMAND):64%",
                           "path": "%REQ(X-ENVOY-ORIGINAL-PATH?:PATH)%",
                           "protocol": "%PROTOCOL%",
                           "request_attempt_count": "%UPSTREAM_REQUEST_ATTEMPT_COUNT%",
                           "request_headers_bytes": "%REQUEST_HEADERS_BYTES%",
                           "response_code": "%RESPONSE_CODE%",
                           "response_code_details": "%RESPONSE_CODE_DETAILS%",
                           "response_flags": "%RESPONSE_FLAGS%",
                           "route": "%ROUTE_NAME%",
                           "rx_bytes": "%BYTES_RECEIVED%",
                           "severity": "info",
                           "stream_id": "%STREAM_ID%",
                           "timestamp": "%START_TIME%",
                           "tx_bytes": "%BYTES_SENT%",
                           "upgrade": "%RESP(UPGRADE)%",
                           "upstream": "%UPSTREAM_CLUSTER%",
                           "upstream_host": "%UPSTREAM_HOST%",
                           "upstream_local_address": "%UPSTREAM_LOCAL_ADDRESS%",
                           "upstream_protocol": "%UPSTREAM_PROTOCOL%",
                           "upstream_service_time_ms": "%RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)%",
                           "user_agent": "%REQ(USER-AGENT)%",
                           "x-request-id": "%REQ(X-REQUEST-ID)%",
                           "xff": "%REQ(X-FORWARDED-FOR)%"
                        },
                        "omit_empty_values": true
                     }
                  }
               }
            ],
            "address": {
               "socket_address": {
                  "address": "0.0.0.0",
                  "port_value": 8080
               }
            },
            "filter_chains": [
               {
                  "filters": [
                     {
                        "name": "envoy.http_connection_manager",
                        "typed_config": {
                           "@type": "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager",
                           "access_log": [
                              {
                                 "name": "envoy.access_loggers.stdout",
                                 "typed_config": {
                                    "@type": "type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog",
                                    "log_format": {
                                       "json_format": {
                                          "authority": "%REQ(authority)%",
                                          "connection_id": "%CONNECTION_ID%",
                                          "connection_termination_details": "%CONNECTION_TERMINATION_DETAILS%",
                                          "downstream_remote_address": "%DOWNSTREAM_DIRECT_REMOTE_ADDRESS_WITHOUT_PORT%",
                                          "duration_ms": "%DURATION%",
                                          "grpc_message": "%RESP(GRPC-MESSAGE):64%",
                                          "grpc_status_code": "%GRPC_STATUS(SNAKE_STRING)%",
                                          "message": "http response",
                                          "method": "%REQ(:method)%",
                                          "pachctl_command": "%REQ(COMMAND):64%",
                                          "path": "%REQ(X-ENVOY-ORIGINAL-PATH?:PATH)%",
                                          "protocol": "%PROTOCOL%",
                                          "request_attempt_count": "%UPSTREAM_REQUEST_ATTEMPT_COUNT%",
                                          "request_headers_bytes": "%REQUEST_HEADERS_BYTES%",
                                          "response_code": "%RESPONSE_CODE%",
                                          "response_code_details": "%RESPONSE_CODE_DETAILS%",
                                          "response_flags": "%RESPONSE_FLAGS%",
                                          "route": "%ROUTE_NAME%",
                                          "rx_bytes": "%BYTES_RECEIVED%",
                                          "severity": "info",
                                          "stream_id": "%STREAM_ID%",
                                          "timestamp": "%START_TIME%",
                                          "tx_bytes": "%BYTES_SENT%",
                                          "upgrade": "%RESP(UPGRADE)%",
                                          "upstream": "%UPSTREAM_CLUSTER%",
                                          "upstream_host": "%UPSTREAM_HOST%",
                                          "upstream_local_address": "%UPSTREAM_LOCAL_ADDRESS%",
                                          "upstream_protocol": "%UPSTREAM_PROTOCOL%",
                                          "upstream_service_time_ms": "%RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)%",
                                          "user_agent": "%REQ(USER-AGENT)%",
                                          "x-request-id": "%REQ(X-REQUEST-ID)%",
                                          "xff": "%REQ(X-FORWARDED-FOR)%"
                                       },
                                       "omit_empty_values": true
                                    }
                                 }
                              }
                           ],
                           "codec_type": "auto",
                           "common_http_protocol_options": {
                              "headers_with_underscores_action": "REJECT_REQUEST",
                              "idle_timeout": "86400s"
                           },
                           "http2_protocol_options": {
                              "initial_connection_window_size": 1048576,
                              "initial_stream_window_size": 524288,
                              "max_concurrent_streams": 100
                           },
                           "http_filters": [
                              {
                                 "name": "envoy.filters.http.grpc_stats",
                                 "typed_config": {
                                    "@type": "type.googleapis.com/envoy.extensions.filters.http.grpc_stats.v3.FilterConfig",
                                    "enable_upstream_stats": true,
                                    "stats_for_all_methods": false
                                 }
                              },
                              {
                                 "name": "envoy.filters.http.tap",
                                 "typed_config": {
                                    "@type": "type.googleapis.com/envoy.extensions.filters.http.tap.v3.Tap",
                                    "common_config": {
                                       "admin_config": {
                                          "config_id": "tap-http-proxy-http"
                                       }
                                    }
                                 }
                              },
                              {
                                 "name": "envoy.filters.http.router",
                                 "typed_config": {
                                    "@type": "type.googleapis.com/envoy.extensions.filters.http.router.v3.Router"
                                 }
                              }
                           ],
                           "http_protocol_options": {
                              "accept_http_10": false
                           },
                           "request_timeout": "604800s",
                           "route_config": {
                              "virtual_hosts": [
                                 {
                                    "domains": [
                                       "*"
                                    ],
                                    "name": "any",
                                    "retry_policy": {
                                       "host_selection_retry_max_attempts": 4,
                                       "num_retries": 4,
                                       "retry_on": "connect-failure"
                                    },
                                    "routes": [
                                       {
                                          "match": {
                                             "grpc": { },
                                             "prefix": "/"
                                          },
                                          "route": {
                                             "cluster": "pachd-grpc",
                                             "timeout": "604800s"
                                          }
                                       },
                                       {
                                          "match": {
                                             "headers": [
                                                {
                                                   "name": "authorization",
                                                   "string_match": {
                                                      "prefix": "AWS4-HMAC-SHA256"
                                                   }
                                                }
                                             ],
                                             "prefix": "/"
                                          },
                                          "route": {
                                             "cluster": "pachd-s3",
                                             "idle_timeout": "600s",
                                             "timeout": "604800s"
                                          }
                                       },
                                       {
                                          "match": {
                                             "headers": [
                                                {
                                                   "name": "authorization",
                                                   "string_match": {
                                                      "prefix": "AWS "
                                                   }
                                                }
                                             ],
                                             "prefix": "/"
                                          },
                                          "route": {
                                             "cluster": "pachd-s3",
                                             "idle_timeout": "600s",
                                             "timeout": "604800s"
                                          }
                                       },
                                       {
                                          "match": {
                                             "prefix": "/dex"
                                          },
                                          "route": {
                                             "cluster": "pachd-identity",
                                             "idle_timeout": "60s",
                                             "timeout": "60s"
                                          }
                                       },
                                       {
                                          "match": {
                                             "prefix": "/authorization-code/callback"
                                          },
                                          "route": {
                                             "cluster": "pachd-oidc",
                                             "idle_timeout": "60s",
                                             "timeout": "60s"
                                          }
                                       },
                                       {
                                          "match": {
                                             "prefix": "/archive"
                                          },
                                          "route": {
                                             "cluster": "pachd-archive",
                                             "idle_timeout": "600s",
                                             "timeout": "604800s"
                                          }
                                       },
                                       {
                                          "match": {
                                             "prefix": "/"
                                          },
                                          "route": {
                                             "cluster": "console",
                                             "idle_timeout": "600s",
                                             "timeout": "3600s",
                                             "upgrade_configs": [
                                                {
                                                   "enabled": true,
                                                   "upgrade_type": "websocket"
                                                }
                                             ]
                                          }
                                       }
                                    ]
                                 }
                              ]
                           },
                           "stat_prefix": "proxy-http",
                           "stream_idle_timeout": "86400s",
                           "use_remote_address": true
                        }
                     }
                  ],
                  "transport_socket": {
                     "name": "envoy.transport_sockets.tap",
                     "typed_config": {
                        "@type": "type.googleapis.com/envoy.extensions.transport_sockets.tap.v3.Tap",
                        "common_config": {
                           "admin_config": {
                              "config_id": "tap-listener-proxy-http"
                           }
                        },
                        "transport_socket": {
                           "name": "envoy.transport_sockets.raw_buffer",
                           "typed_config": {
                              "@type": "type.googleapis.com/envoy.extensions.transport_sockets.raw_buffer.v3.RawBuffer"
                           }
                        }
                     }
                  }
               }
            ],
            "name": "proxy-http",
            "per_connection_buffer_limit_bytes": 32768,
            "traffic_direction": "INBOUND"
         },
         {
            "access_log": [
               {
                  "name": "envoy.access_loggers.stdout",
                  "typed_config": {
                     "@type": "type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StderrAccessLog",
                     "log_format": {
                        "json_format": {
                           "authority": "%REQ(authority)%",
                           "connection_id": "%CONNECTION_ID%",
                           "connection_termination_details": "%CONNECTION_TERMINATION_DETAILS%",
                           "downstream_remote_address": "%DOWNSTREAM_DIRECT_REMOTE_ADDRESS_WITHOUT_PORT%",
                           "duration_ms": "%DURATION%",
                           "grpc_message": "%RESP(GRPC-MESSAGE):64%",
                           "grpc_status_code": "%GRPC_STATUS(SNAKE_STRING)%",
                           "listener": "https-warning",
                           "message": "listener log",
                           "method": "%REQ(:method)%",
                           "pachctl_command": "%REQ(COMMAND):64%",
                           "path": "%REQ(X-ENVOY-ORIGINAL-PATH?:PATH)%",
                           "protocol": "%PROTOCOL%",
                           "request_attempt_count": "%UPSTREAM_REQUEST_ATTEMPT_COUNT%",
                           "request_headers_bytes": "%REQUEST_HEADERS_BYTES%",
                           "response_code": "%RESPONSE_CODE%",
                           "response_code_details": "%RESPONSE_CODE_DETAILS%",
                           "response_flags": "%RESPONSE_FLAGS%",
                           "route": "%ROUTE_NAME%",
                           "rx_bytes": "%BYTES_RECEIVED%",
                           "severity": "info",
                           "stream_id": "%STREAM_ID%",
                           "timestamp": "%START_TIME%",
                           "tx_bytes": "%BYTES_SENT%",
                           "upgrade": "%RESP(UPGRADE)%",
                           "upstream": "%UPSTREAM_CLUSTER%",
                           "upstream_host": "%UPSTREAM_HOST%",
                           "upstream_local_address": "%UPSTREAM_LOCAL_ADDRESS%",
                           "upstream_protocol": "%UPSTREAM_PROTOCOL%",
                           "upstream_service_time_ms": "%RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)%",
                           "user_agent": "%REQ(USER-AGENT)%",
                           "x-request-id": "%REQ(X-REQUEST-ID)%",
                           "xff": "%REQ(X-FORWARDED-FOR)%"
                        },
                        "omit_empty_values": true
                     }
                  }
               }
            ],
            "address": {
               "socket_address": {
                  "address": "0.0.0.0",
                  "port_value": 8443
               }
            },
            "filter_chains": [
               {
                  "filters": [
                     {
                        "name": "envoy.http_connection_manager",
                        "typed_config": {
                           "@type": "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager",
                           "access_log": [
                              {
                                 "name": "envoy.access_loggers.stdout",
                                 "typed_config": {
                                    "@type": "type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog",
                                    "log_format": {
                                       "json_format": {
                                          "authority": "%REQ(authority)%",
                                          "connection_id": "%CONNECTION_ID%",
                                          "connection_termination_details": "%CONNECTION_TERMINATION_DETAILS%",
                                          "downstream_remote_address": "%DOWNSTREAM_DIRECT_REMOTE_ADDRESS_WITHOUT_PORT%",
                                          "duration_ms": "%DURATION%",
                                          "grpc_message": "%RESP(GRPC-MESSAGE):64%",
                                          "grpc_status_code": "%GRPC_STATUS(SNAKE_STRING)%",
                                          "message": "http response",
                                          "method": "%REQ(:method)%",
                                          "pachctl_command": "%REQ(COMMAND):64%",
                                          "path": "%REQ(X-ENVOY-ORIGINAL-PATH?:PATH)%",
                                          "protocol": "%PROTOCOL%",
                                          "request_attempt_count": "%UPSTREAM_REQUEST_ATTEMPT_COUNT%",
                                          "request_headers_bytes": "%REQUEST_HEADERS_BYTES%",
                                          "response_code": "%RESPONSE_CODE%",
                                          "response_code_details": "%RESPONSE_CODE_DETAILS%",
                                          "response_flags": "%RESPONSE_FLAGS%",
                                          "route": "%ROUTE_NAME%",
                                          "rx_bytes": "%BYTES_RECEIVED%",
                                          "severity": "info",
                                          "stream_id": "%STREAM_ID%",
                                          "timestamp": "%START_TIME%",
                                          "tx_bytes": "%BYTES_SENT%",
                                          "upgrade": "%RESP(UPGRADE)%",
                                          "upstream": "%UPSTREAM_CLUSTER%",
                                          "upstream_host": "%UPSTREAM_HOST%",
                                          "upstream_local_address": "%UPSTREAM_LOCAL_ADDRESS%",
                                          "upstream_protocol": "%UPSTREAM_PROTOCOL%",
                                          "upstream_service_time_ms": "%RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)%",
                                          "user_agent": "%REQ(USER-AGENT)%",
                                          "x-request-id": "%REQ(X-REQUEST-ID)%",
                                          "xff": "%REQ(X-FORWARDED-FOR)%"
                                       },
                                       "omit_empty_values": true
                                    }
                                 }
                              }
                           ],
                           "codec_type": "auto",
                           "common_http_protocol_options": {
                              "headers_with_underscores_action": "REJECT_REQUEST",
                              "idle_timeout": "86400s"
                           },
                           "http2_protocol_options": {
                              "initial_connection_window_size": 1048576,
                              "initial_stream_window_size": 524288,
                              "max_concurrent_streams": 100
                           },
                           "http_filters": [
                              {
                                 "name": "envoy.filters.http.tap",
                                 "typed_config": {
                                    "@type": "type.googleapis.com/envoy.extensions.filters.http.tap.v3.Tap",
                                    "common_config": {
                                       "admin_config": {
                                          "config_id": "tap-http-https-warning"
                                       }
                                    }
                                 }
                              },
                              {
                                 "name": "envoy.filters.http.router",
                                 "typed_config": {
                                    "@type": "type.googleapis.com/envoy.extensions.filters.http.router.v3.Router"
                                 }
                              }
                           ],
                           "http_protocol_options": {
                              "accept_http_10": false
                           },
                           "request_timeout": "604800s",
                           "route_config": {
                              "virtual_hosts": [
                                 {
                                    "domains": [
                                       "*"
                                    ],
                                    "name": "any",
                                    "retry_policy": {
                                       "host_selection_retry_max_attempts": 4,
                                       "num_retries": 4,
                                       "retry_on": "connect-failure"
                                    },
                                    "routes": [
                                       {
                                          "direct_response": {
                                             "body": {
                                                "inline_string": "This is the cleartext installation of pachyderm-proxy; enable TLS in the helm chart and reinstall."
                                             },
                                             "status": 500
                                          },
                                          "match": {
                                             "prefix": "/"
                                          }
                                       }
                                    ]
                                 }
                              ]
                           },
                           "stat_prefix": "https-warning",
                           "stream_idle_timeout": "86400s",
                           "use_remote_address": true
                        }
                     }
                  ],
                  "transport_socket": {
                     "name": "envoy.transport_sockets.tap",
                     "typed_config": {
                        "@type": "type.googleapis.com/envoy.extensions.transport_sockets.tap.v3.Tap",
                        "common_config": {
                           "admin_config": {
                              "config_id": "tap-listener-https-warning"
                           }
                        },
                        "transport_socket": {
                           "name": "envoy.transport_sockets.raw_buffer",
                           "typed_config": {
                              "@type": "type.googleapis.com/envoy.extensions.transport_sockets.raw_buffer.v3.RawBuffer"
                           }
                        }
                     }
                  }
               }
            ],
            "name": "https-warning",
            "per_connection_buffer_limit_bytes": 32768,
            "traffic_direction": "INBOUND"
         },
         {
            "access_log": [
               {
                  "name": "envoy.access_loggers.stdout",
                  "typed_config": {
                     "@type": "type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StderrAccessLog",
                     "log_format": {
                        "json_format": {
                           "authority": "%REQ(authority)%",
                           "connection_id": "%CONNECTION_ID%",
                           "connection_termination_details": "%CONNECTION_TERMINATION_DETAILS%",
                           "downstream_remote_address": "%DOWNSTREAM_DIRECT_REMOTE_ADDRESS_WITHOUT_PORT%",
                           "duration_ms": "%DURATION%",
                           "grpc_message": "%RESP(GRPC-MESSAGE):64%",
                           "grpc_status_code": "%GRPC_STATUS(SNAKE_STRING)%",
                           "listener": "direct-pachd-s3",
                           "message": "listener log",
                           "method": "%REQ(:method)%",
                           "pachctl_command": "%REQ(COMMAND):64%",
                           "path": "%REQ(X-ENVOY-ORIGINAL-PATH?:PATH)%",
                           "protocol": "%PROTOCOL%",
                           "request_attempt_count": "%UPSTREAM_REQUEST_ATTEMPT_COUNT%",
                           "request_headers_bytes": "%REQUEST_HEADERS_BYTES%",
                           "response_code": "%RESPONSE_CODE%",
                           "response_code_details": "%RESPONSE_CODE_DETAILS%",
                           "response_flags": "%RESPONSE_FLAGS%",
                           "route": "%ROUTE_NAME%",
                           "rx_bytes": "%BYTES_RECEIVED%",
                           "severity": "info",
                           "stream_id": "%STREAM_ID%",
                           "timestamp": "%START_TIME%",
                           "tx_bytes": "%BYTES_SENT%",
                           "upgrade": "%RESP(UPGRADE)%",
                           "upstream": "%UPSTREAM_CLUSTER%",
                           "upstream_host": "%UPSTREAM_HOST%",
                           "upstream_local_address": "%UPSTREAM_LOCAL_ADDRESS%",
                           "upstream_protocol": "%UPSTREAM_PROTOCOL%",
                           "upstream_service_time_ms": "%RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)%",
                           "user_agent": "%REQ(USER-AGENT)%",
                           "x-request-id": "%REQ(X-REQUEST-ID)%",
                           "xff": "%REQ(X-FORWARDED-FOR)%"
                        },
                        "omit_empty_values": true
                     }
                  }
               }
            ],
            "address": {
               "socket_address": {
                  "address": "0.0.0.0",
                  "port_value": 1600
               }
            },
            "filter_chains": [
               {
                  "filters": [
                     {
                        "name": "envoy.http_connection_manager",
                        "typed_config": {
                           "@type": "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager",
                           "access_log": [
                              {
                                 "name": "envoy.access_loggers.stdout",
                                 "typed_config": {
                                    "@type": "type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog",
                                    "log_format": {
                                       "json_format": {
                                          "authority": "%REQ(authority)%",
                                          "connection_id": "%CONNECTION_ID%",
                                          "connection_termination_details": "%CONNECTION_TERMINATION_DETAILS%",
                                          "downstream_remote_address": "%DOWNSTREAM_DIRECT_REMOTE_ADDRESS_WITHOUT_PORT%",
                                          "duration_ms": "%DURATION%",
                                          "grpc_message": "%RESP(GRPC-MESSAGE):64%",
                                          "grpc_status_code": "%GRPC_STATUS(SNAKE_STRING)%",
                                          "message": "http response",
                                          "method": "%REQ(:method)%",
                                          "pachctl_command": "%REQ(COMMAND):64%",
                                          "path": "%REQ(X-ENVOY-ORIGINAL-PATH?:PATH)%",
                                          "protocol": "%PROTOCOL%",
                                          "request_attempt_count": "%UPSTREAM_REQUEST_ATTEMPT_COUNT%",
                                          "request_headers_bytes": "%REQUEST_HEADERS_BYTES%",
                                          "response_code": "%RESPONSE_CODE%",
                                          "response_code_details": "%RESPONSE_CODE_DETAILS%",
                                          "response_flags": "%RESPONSE_FLAGS%",
                                          "route": "%ROUTE_NAME%",
                                          "rx_bytes": "%BYTES_RECEIVED%",
                                          "severity": "info",
                                          "stream_id": "%STREAM_ID%",
                                          "timestamp": "%START_TIME%",
                                          "tx_bytes": "%BYTES_SENT%",
                                          "upgrade": "%RESP(UPGRADE)%",
                                          "upstream": "%UPSTREAM_CLUSTER%",
                                          "upstream_host": "%UPSTREAM_HOST%",
                                          "upstream_local_address": "%UPSTREAM_LOCAL_ADDRESS%",
                                          "upstream_protocol": "%UPSTREAM_PROTOCOL%",
                                          "upstream_service_time_ms": "%RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)%",
                                          "user_agent": "%REQ(USER-AGENT)%",
                                          "x-request-id": "%REQ(X-REQUEST-ID)%",
                                          "xff": "%REQ(X-FORWARDED-FOR)%"
                                       },
                                       "omit_empty_values": true
                                    }
                                 }
                              }
                           ],
                           "codec_type": "auto",
                           "common_http_protocol_options": {
                              "headers_with_underscores_action": "REJECT_REQUEST",
                              "idle_timeout": "86400s"
                           },
                           "http2_protocol_options": {
                              "initial_connection_window_size": 1048576,
                              "initial_stream_window_size": 524288,
                              "max_concurrent_streams": 100
                           },
                           "http_filters": [
                              {
                                 "name": "envoy.filters.http.tap",
                                 "typed_config": {
                                    "@type": "type.googleapis.com/envoy.extensions.filters.http.tap.v3.Tap",
                                    "common_config": {
                                       "admin_config": {
                                          "config_id": "tap-http-direct-pachd-s3"
                                       }
                                    }
                                 }
                              },
                              {
                                 "name": "envoy.filters.http.router",
                                 "typed_config": {
                                    "@type": "type.googleapis.com/envoy.extensions.filters.http.router.v3.Router"
                                 }
                              }
                           ],
                           "http_protocol_options": {
                              "accept_http_10": false
                           },
                           "request_timeout": "604800s",
                           "route_config": {
                              "virtual_hosts": [
                                 {
                                    "domains": [
                                       "*"
                                    ],
                                    "name": "any",
                                    "retry_policy": {
                                       "host_selection_retry_max_attempts": 4,
                                       "num_retries": 4,
                                       "retry_on": "connect-failure"
                                    },
                                    "routes": [
                                       {
                                          "match": {
                                             "headers": [
                                                {
                                                   "name": "authorization",
                                                   "string_match": {
                                                      "prefix": "AWS4-HMAC-SHA256"
                                                   }
                                                }
                                             ],
                                             "prefix": "/"
                                          },
                                          "route": {
                                             "cluster": "pachd-s3",
                                             "idle_timeout": "600s",
                                             "timeout": "604800s"
                                          }
                                       },
                                       {
                                          "match": {
                                             "headers": [
                                                {
                                                   "name": "authorization",
                                                   "string_match": {
                                                      "prefix": "AWS "
                                                   }
                                                }
                                             ],
                                             "prefix": "/"
                                          },
                                          "route": {
                                             "cluster": "pachd-s3",
                                             "idle_timeout": "600s",
                                             "timeout": "604800s"
                                          }
                                       }
                                    ]
                                 }
                              ]
                           },
                           "stat_prefix": "direct-pachd-s3",
                           "stream_idle_timeout": "86400s",
                           "use_remote_address": true
                        }
                     }
                  ],
                  "transport_socket": {
                     "name": "envoy.transport_sockets.tap",
                     "typed_config": {
                        "@type": "type.googleapis.com/envoy.extensions.transport_sockets.tap.v3.Tap",
                        "common_config": {
                           "admin_config": {
                              "config_id": "tap-listener-direct-pachd-s3"
                           }
                        },
                        "transport_socket": {
                           "name": "envoy.transport_sockets.raw_buffer",
                           "typed_config": {
                              "@type": "type.googleapis.com/envoy.extensions.transport_sockets.raw_buffer.v3.RawBuffer"
                           }
                        }
                     }
                  }
               }
            ],
            "name": "direct-pachd-s3",
            "per_connection_buffer_limit_bytes": 32768,
            "traffic_direction": "INBOUND"
         },
         {
            "access_log": [
               {
                  "name": "envoy.access_loggers.stdout",
                  "typed_config": {
                     "@type": "type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StderrAccessLog",
                     "log_format": {
                        "json_format": {
                           "authority": "%REQ(authority)%",
                           "connection_id": "%CONNECTION_ID%",
                           "connection_termination_details": "%CONNECTION_TERMINATION_DETAILS%",
                           "downstream_remote_address": "%DOWNSTREAM_DIRECT_REMOTE_ADDRESS_WITHOUT_PORT%",
                           "duration_ms": "%DURATION%",
                           "grpc_message": "%RESP(GRPC-MESSAGE):64%",
                           "grpc_status_code": "%GRPC_STATUS(SNAKE_STRING)%",
                           "listener": "direct-pachd-grpc",
                           "message": "listener log",
                           "method": "%REQ(:method)%",
                           "pachctl_command": "%REQ(COMMAND):64%",
                           "path": "%REQ(X-ENVOY-ORIGINAL-PATH?:PATH)%",
                           "protocol": "%PROTOCOL%",
                           "request_attempt_count": "%UPSTREAM_REQUEST_ATTEMPT_COUNT%",
                           "request_headers_bytes": "%REQUEST_HEADERS_BYTES%",
                           "response_code": "%RESPONSE_CODE%",
                           "response_code_details": "%RESPONSE_CODE_DETAILS%",
                           "response_flags": "%RESPONSE_FLAGS%",
                           "route": "%ROUTE_NAME%",
                           "rx_bytes": "%BYTES_RECEIVED%",
                           "severity": "info",
                           "stream_id": "%STREAM_ID%",
                           "timestamp": "%START_TIME%",
                           "tx_bytes": "%BYTES_SENT%",
                           "upgrade": "%RESP(UPGRADE)%",
                           "upstream": "%UPSTREAM_CLUSTER%",
                           "upstream_host": "%UPSTREAM_HOST%",
                           "upstream_local_address": "%UPSTREAM_LOCAL_ADDRESS%",
                           "upstream_protocol": "%UPSTREAM_PROTOCOL%",
                           "upstream_service_time_ms": "%RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)%",
                           "user_agent": "%REQ(USER-AGENT)%",
                           "x-request-id": "%REQ(X-REQUEST-ID)%",
                           "xff": "%REQ(X-FORWARDED-FOR)%"
                        },
                        "omit_empty_values": true
                     }
                  }
               }
            ],
            "address": {
               "socket_address": {
                  "address": "0.0.0.0",
                  "port_value": 1650
               }
            },
            "filter_chains": [
               {
                  "filters": [
                     {
                        "name": "envoy.http_connection_manager",
                        "typed_config": {
                           "@type": "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager",
                           "access_log": [
                              {
                                 "name": "envoy.access_loggers.stdout",
                                 "typed_config": {
                                    "@type": "type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog",
                                    "log_format": {
                                       "json_format": {
                                          "authority": "%REQ(authority)%",
                                          "connection_id": "%CONNECTION_ID%",
                                          "connection_termination_details": "%CONNECTION_TERMINATION_DETAILS%",
                                          "downstream_remote_address": "%DOWNSTREAM_DIRECT_REMOTE_ADDRESS_WITHOUT_PORT%",
                                          "duration_ms": "%DURATION%",
                                          "grpc_message": "%RESP(GRPC-MESSAGE):64%",
                                          "grpc_status_code": "%GRPC_STATUS(SNAKE_STRING)%",
                                          "message": "http response",
                                          "method": "%REQ(:method)%",
                                          "pachctl_command": "%REQ(COMMAND):64%",
                                          "path": "%REQ(X-ENVOY-ORIGINAL-PATH?:PATH)%",
                                          "protocol": "%PROTOCOL%",
                                          "request_attempt_count": "%UPSTREAM_REQUEST_ATTEMPT_COUNT%",
                                          "request_headers_bytes": "%REQUEST_HEADERS_BYTES%",
                                          "response_code": "%RESPONSE_CODE%",
                                          "response_code_details": "%RESPONSE_CODE_DETAILS%",
                                          "response_flags": "%RESPONSE_FLAGS%",
                                          "route": "%ROUTE_NAME%",
                                          "rx_bytes": "%BYTES_RECEIVED%",
                                          "severity": "info",
                                          "stream_id": "%STREAM_ID%",
                                          "timestamp": "%START_TIME%",
                                          "tx_bytes": "%BYTES_SENT%",
                                          "upgrade": "%RESP(UPGRADE)%",
                                          "upstream": "%UPSTREAM_CLUSTER%",
                                          "upstream_host": "%UPSTREAM_HOST%",
                                          "upstream_local_address": "%UPSTREAM_LOCAL_ADDRESS%",
                                          "upstream_protocol": "%UPSTREAM_PROTOCOL%",
                                          "upstream_service_time_ms": "%RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)%",
                                          "user_agent": "%REQ(USER-AGENT)%",
                                          "x-request-id": "%REQ(X-REQUEST-ID)%",
                                          "xff": "%REQ(X-FORWARDED-FOR)%"
                                       },
                                       "omit_empty_values": true
                                    }
                                 }
                              }
                           ],
                           "codec_type": "auto",
                           "common_http_protocol_options": {
                              "headers_with_underscores_action": "REJECT_REQUEST",
                              "idle_timeout": "86400s"
                           },
                           "http2_protocol_options": {
                              "initial_connection_window_size": 1048576,
                              "initial_stream_window_size": 524288,
                              "max_concurrent_streams": 100
                           },
                           "http_filters": [
                              {
                                 "name": "envoy.filters.http.grpc_stats",
                                 "typed_config": {
                                    "@type": "type.googleapis.com/envoy.extensions.filters.http.grpc_stats.v3.FilterConfig",
                                    "enable_upstream_stats": true,
                                    "stats_for_all_methods": false
                                 }
                              },
                              {
                                 "name": "envoy.filters.http.tap",
                                 "typed_config": {
                                    "@type": "type.googleapis.com/envoy.extensions.filters.http.tap.v3.Tap",
                                    "common_config": {
                                       "admin_config": {
                                          "config_id": "tap-http-direct-pachd-grpc"
                                       }
                                    }
                                 }
                              },
                              {
                                 "name": "envoy.filters.http.router",
                                 "typed_config": {
                                    "@type": "type.googleapis.com/envoy.extensions.filters.http.router.v3.Router"
                                 }
                              }
                           ],
                           "http_protocol_options": {
                              "accept_http_10": false
                           },
                           "request_timeout": "604800s",
                           "route_config": {
                              "virtual_hosts": [
                                 {
                                    "domains": [
                                       "*"
                                    ],
                                    "name": "any",
                                    "retry_policy": {
                                       "host_selection_retry_max_attempts": 4,
                                       "num_retries": 4,
                                       "retry_on": "connect-failure"
                                    },
                                    "routes": [
                                       {
                                          "match": {
                                             "grpc": { },
                                             "prefix": "/"
                                          },
                                          "route": {
                                             "cluster": "pachd-grpc",
                                             "timeout": "604800s"
                                          }
                                       }
                                    ]
                                 }
                              ]
                           },
                           "stat_prefix": "direct-pachd-grpc",
                           "stream_idle_timeout": "86400s",
                           "use_remote_address": true
                        }
                     }
                  ],
                  "transport_socket": {
                     "name": "envoy.transport_sockets.tap",
                     "typed_config": {
                        "@type": "type.googleapis.com/envoy.extensions.transport_sockets.tap.v3.Tap",
                        "common_config": {
                           "admin_config": {
                              "config_id": "tap-listener-direct-pachd-grpc"
                           }
                        },
                        "transport_socket": {
                           "name": "envoy.transport_sockets.raw_buffer",
                           "typed_config": {
                              "@type": "type.googleapis.com/envoy.extensions.transport_sockets.raw_buffer.v3.RawBuffer"
                           }
                        }
                     }
                  }
               }
            ],
            "name": "direct-pachd-grpc",
            "per_connection_buffer_limit_bytes": 32768,
            "traffic_direction": "INBOUND"
         },
         {
            "access_log": [
               {
                  "name": "envoy.access_loggers.stdout",
                  "typed_config": {
                     "@type": "type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StderrAccessLog",
                     "log_format": {
                        "json_format": {
                           "authority": "%REQ(authority)%",
                           "connection_id": "%CONNECTION_ID%",
                           "connection_termination_details": "%CONNECTION_TERMINATION_DETAILS%",
                           "downstream_remote_address": "%DOWNSTREAM_DIRECT_REMOTE_ADDRESS_WITHOUT_PORT%",
                           "duration_ms": "%DURATION%",
                           "grpc_message": "%RESP(GRPC-MESSAGE):64%",
                           "grpc_status_code": "%GRPC_STATUS(SNAKE_STRING)%",
                           "listener": "direct-pachd-metrics",
                           "message": "listener log",
                           "method": "%REQ(:method)%",
                           "pachctl_command": "%REQ(COMMAND):64%",
                           "path": "%REQ(X-ENVOY-ORIGINAL-PATH?:PATH)%",
                           "protocol": "%PROTOCOL%",
                           "request_attempt_count": "%UPSTREAM_REQUEST_ATTEMPT_COUNT%",
                           "request_headers_bytes": "%REQUEST_HEADERS_BYTES%",
                           "response_code": "%RESPONSE_CODE%",
                           "response_code_details": "%RESPONSE_CODE_DETAILS%",
                           "response_flags": "%RESPONSE_FLAGS%",
                           "route": "%ROUTE_NAME%",
                           "rx_bytes": "%BYTES_RECEIVED%",
                           "severity": "info",
                           "stream_id": "%STREAM_ID%",
                           "timestamp": "%START_TIME%",
                           "tx_bytes": "%BYTES_SENT%",
                           "upgrade": "%RESP(UPGRADE)%",
                           "upstream": "%UPSTREAM_CLUSTER%",
                           "upstream_host": "%UPSTREAM_HOST%",
                           "upstream_local_address": "%UPSTREAM_LOCAL_ADDRESS%",
                           "upstream_protocol": "%UPSTREAM_PROTOCOL%",
                           "upstream_service_time_ms": "%RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)%",
                           "user_agent": "%REQ(USER-AGENT)%",
                           "x-request-id": "%REQ(X-REQUEST-ID)%",
                           "xff": "%REQ(X-FORWARDED-FOR)%"
                        },
                        "omit_empty_values": true
                     }
                  }
               }
            ],
            "address": {
               "socket_address": {
                  "address": "0.0.0.0",
                  "port_value": 1656
               }
            },
            "filter_chains": [
               {
                  "filters": [
                     {
                        "name": "envoy.http_connection_manager",
                        "typed_config": {
                           "@type": "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager",
                           "access_log": [
                              {
                                 "name": "envoy.access_loggers.stdout",
                                 "typed_config": {
                                    "@type": "type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog",
                                    "log_format": {
                                       "json_format": {
                                          "authority": "%REQ(authority)%",
                                          "connection_id": "%CONNECTION_ID%",
                                          "connection_termination_details": "%CONNECTION_TERMINATION_DETAILS%",
                                          "downstream_remote_address": "%DOWNSTREAM_DIRECT_REMOTE_ADDRESS_WITHOUT_PORT%",
                                          "duration_ms": "%DURATION%",
                                          "grpc_message": "%RESP(GRPC-MESSAGE):64%",
                                          "grpc_status_code": "%GRPC_STATUS(SNAKE_STRING)%",
                                          "message": "http response",
                                          "method": "%REQ(:method)%",
                                          "pachctl_command": "%REQ(COMMAND):64%",
                                          "path": "%REQ(X-ENVOY-ORIGINAL-PATH?:PATH)%",
                                          "protocol": "%PROTOCOL%",
                                          "request_attempt_count": "%UPSTREAM_REQUEST_ATTEMPT_COUNT%",
                                          "request_headers_bytes": "%REQUEST_HEADERS_BYTES%",
                                          "response_code": "%RESPONSE_CODE%",
                                          "response_code_details": "%RESPONSE_CODE_DETAILS%",
                                          "response_flags": "%RESPONSE_FLAGS%",
                                          "route": "%ROUTE_NAME%",
                                          "rx_bytes": "%BYTES_RECEIVED%",
                                          "severity": "info",
                                          "stream_id": "%STREAM_ID%",
                                          "timestamp": "%START_TIME%",
                                          "tx_bytes": "%BYTES_SENT%",
                                          "upgrade": "%RESP(UPGRADE)%",
                                          "upstream": "%UPSTREAM_CLUSTER%",
                                          "upstream_host": "%UPSTREAM_HOST%",
                                          "upstream_local_address": "%UPSTREAM_LOCAL_ADDRESS%",
                                          "upstream_protocol": "%UPSTREAM_PROTOCOL%",
                                          "upstream_service_time_ms": "%RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)%",
                                          "user_agent": "%REQ(USER-AGENT)%",
                                          "x-request-id": "%REQ(X-REQUEST-ID)%",
                                          "xff": "%REQ(X-FORWARDED-FOR)%"
                                       },
                                       "omit_empty_values": true
                                    }
                                 }
                              }
                           ],
                           "codec_type": "auto",
                           "common_http_protocol_options": {
                              "headers_with_underscores_action": "REJECT_REQUEST",
                              "idle_timeout": "86400s"
                           },
                           "http2_protocol_options": {
                              "initial_connection_window_size": 1048576,
                              "initial_stream_window_size": 524288,
                              "max_concurrent_streams": 100
                           },
                           "http_filters": [
                              {
                                 "name": "envoy.filters.http.tap",
                                 "typed_config": {
                                    "@type": "type.googleapis.com/envoy.extensions.filters.http.tap.v3.Tap",
                                    "common_config": {
                                       "admin_config": {
                                          "config_id": "tap-http-direct-pachd-metrics"
                                       }
                                    }
                                 }
                              },
                              {
                                 "name": "envoy.filters.http.router",
                                 "typed_config": {
                                    "@type": "type.googleapis.com/envoy.extensions.filters.http.router.v3.Router"
                                 }
                              }
                           ],
                           "http_protocol_options": {
                              "accept_http_10": false
                           },
                           "request_timeout": "604800s",
                           "route_config": {
                              "virtual_hosts": [
                                 {
                                    "domains": [
                                       "*"
                                    ],
                                    "name": "any",
                                    "retry_policy": {
                                       "host_selection_retry_max_attempts": 4,
                                       "num_retries": 4,
                                       "retry_on": "connect-failure"
                                    },
                                    "routes": [
                                       {
                                          "match": {
                                             "prefix": "/"
                                          },
                                          "route": {
                                             "cluster": "pachd-metrics",
                                             "idle_timeout": "60s",
                                             "timeout": "60s"
                                          }
                                       }
                                    ]
                                 }
                              ]
                           },
                           "stat_prefix": "direct-pachd-metrics",
                           "stream_idle_timeout": "86400s",
                           "use_remote_address": true
                        }
                     }
                  ],
                  "transport_socket": {
                     "name": "envoy.transport_sockets.tap",
                     "typed_config": {
                        "@type": "type.googleapis.com/envoy.extensions.transport_sockets.tap.v3.Tap",
                        "common_config": {
                           "admin_config": {
                              "config_id": "tap-listener-direct-pachd-metrics"
                           }
                        },
                        "transport_socket": {
                           "name": "envoy.transport_sockets.raw_buffer",
                           "typed_config": {
                              "@type": "type.googleapis.com/envoy.extensions.transport_sockets.raw_buffer.v3.RawBuffer"
                           }
                        }
                     }
                  }
               }
            ],
            "name": "direct-pachd-metrics",
            "per_connection_buffer_limit_bytes": 32768,
            "traffic_direction": "INBOUND"
         },
         {
            "access_log": [
               {
                  "name": "envoy.access_loggers.stdout",
                  "typed_config": {
                     "@type": "type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StderrAccessLog",
                     "log_format": {
                        "json_format": {
                           "authority": "%REQ(authority)%",
                           "connection_id": "%CONNECTION_ID%",
                           "connection_termination_details": "%CONNECTION_TERMINATION_DETAILS%",
                           "downstream_remote_address": "%DOWNSTREAM_DIRECT_REMOTE_ADDRESS_WITHOUT_PORT%",
                           "duration_ms": "%DURATION%",
                           "grpc_message": "%RESP(GRPC-MESSAGE):64%",
                           "grpc_status_code": "%GRPC_STATUS(SNAKE_STRING)%",
                           "listener": "direct-pachd-oidc",
                           "message": "listener log",
                           "method": "%REQ(:method)%",
                           "pachctl_command": "%REQ(COMMAND):64%",
                           "path": "%REQ(X-ENVOY-ORIGINAL-PATH?:PATH)%",
                           "protocol": "%PROTOCOL%",
                           "request_attempt_count": "%UPSTREAM_REQUEST_ATTEMPT_COUNT%",
                           "request_headers_bytes": "%REQUEST_HEADERS_BYTES%",
                           "response_code": "%RESPONSE_CODE%",
                           "response_code_details": "%RESPONSE_CODE_DETAILS%",
                           "response_flags": "%RESPONSE_FLAGS%",
                           "route": "%ROUTE_NAME%",
                           "rx_bytes": "%BYTES_RECEIVED%",
                           "severity": "info",
                           "stream_id": "%STREAM_ID%",
                           "timestamp": "%START_TIME%",
                           "tx_bytes": "%BYTES_SENT%",
                           "upgrade": "%RESP(UPGRADE)%",
                           "upstream": "%UPSTREAM_CLUSTER%",
                           "upstream_host": "%UPSTREAM_HOST%",
                           "upstream_local_address": "%UPSTREAM_LOCAL_ADDRESS%",
                           "upstream_protocol": "%UPSTREAM_PROTOCOL%",
                           "upstream_service_time_ms": "%RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)%",
                           "user_agent": "%REQ(USER-AGENT)%",
                           "x-request-id": "%REQ(X-REQUEST-ID)%",
                           "xff": "%REQ(X-FORWARDED-FOR)%"
                        },
                        "omit_empty_values": true
                     }
                  }
               }
            ],
            "address": {
               "socket_address": {
                  "address": "0.0.0.0",
                  "port_value": 1657
               }
            },
            "filter_chains": [
               {
                  "filters": [
                     {
                        "name": "envoy.http_connection_manager",
                        "typed_config": {
                           "@type": "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager",
                           "access_log": [
                              {
                                 "name": "envoy.access_loggers.stdout",
                                 "typed_config": {
                                    "@type": "type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog",
                                    "log_format": {
                                       "json_format": {
                                          "authority": "%REQ(authority)%",
                                          "connection_id": "%CONNECTION_ID%",
                                          "connection_termination_details": "%CONNECTION_TERMINATION_DETAILS%",
                                          "downstream_remote_address": "%DOWNSTREAM_DIRECT_REMOTE_ADDRESS_WITHOUT_PORT%",
                                          "duration_ms": "%DURATION%",
                                          "grpc_message": "%RESP(GRPC-MESSAGE):64%",
                                          "grpc_status_code": "%GRPC_STATUS(SNAKE_STRING)%",
                                          "message": "http response",
                                          "method": "%REQ(:method)%",
                                          "pachctl_command": "%REQ(COMMAND):64%",
                                          "path": "%REQ(X-ENVOY-ORIGINAL-PATH?:PATH)%",
                                          "protocol": "%PROTOCOL%",
                                          "request_attempt_count": "%UPSTREAM_REQUEST_ATTEMPT_COUNT%",
                                          "request_headers_bytes": "%REQUEST_HEADERS_BYTES%",
                                          "response_code": "%RESPONSE_CODE%",
                                          "response_code_details": "%RESPONSE_CODE_DETAILS%",
                                          "response_flags": "%RESPONSE_FLAGS%",
                                          "route": "%ROUTE_NAME%",
                                          "rx_bytes": "%BYTES_RECEIVED%",
                                          "severity": "info",
                                          "stream_id": "%STREAM_ID%",
                                          "timestamp": "%START_TIME%",
                                          "tx_bytes": "%BYTES_SENT%",
                                          "upgrade": "%RESP(UPGRADE)%",
                                          "upstream": "%UPSTREAM_CLUSTER%",
                                          "upstream_host": "%UPSTREAM_HOST%",
                                          "upstream_local_address": "%UPSTREAM_LOCAL_ADDRESS%",
                                          "upstream_protocol": "%UPSTREAM_PROTOCOL%",
                                          "upstream_service_time_ms": "%RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)%",
                                          "user_agent": "%REQ(USER-AGENT)%",
                                          "x-request-id": "%REQ(X-REQUEST-ID)%",
                                          "xff": "%REQ(X-FORWARDED-FOR)%"
                                       },
                                       "omit_empty_values": true
                                    }
                                 }
                              }
                           ],
                           "codec_type": "auto",
                           "common_http_protocol_options": {
                              "headers_with_underscores_action": "REJECT_REQUEST",
                              "idle_timeout": "86400s"
                           },
                           "http2_protocol_options": {
                              "initial_connection_window_size": 1048576,
                              "initial_stream_window_size": 524288,
                              "max_concurrent_streams": 100
                           },
                           "http_filters": [
                              {
                                 "name": "envoy.filters.http.tap",
                                 "typed_config": {
                                    "@type": "type.googleapis.com/envoy.extensions.filters.http.tap.v3.Tap",
                                    "common_config": {
                                       "admin_config": {
                                          "config_id": "tap-http-direct-pachd-oidc"
                                       }
                                    }
                                 }
                              },
                              {
                                 "name": "envoy.filters.http.router",
                                 "typed_config": {
                                    "@type": "type.googleapis.com/envoy.extensions.filters.http.router.v3.Router"
                                 }
                              }
                           ],
                           "http_protocol_options": {
                              "accept_http_10": false
                           },
                           "request_timeout": "604800s",
                           "route_config": {
                              "virtual_hosts": [
                                 {
                                    "domains": [
                                       "*"
                                    ],
                                    "name": "any",
                                    "retry_policy": {
                                       "host_selection_retry_max_attempts": 4,
                                       "num_retries": 4,
                                       "retry_on": "connect-failure"
                                    },
                                    "routes": [
                                       {
                                          "match": {
                                             "prefix": "/authorization-code/callback"
                                          },
                                          "route": {
                                             "cluster": "pachd-oidc",
                                             "idle_timeout": "60s",
                                             "timeout": "60s"
                                          }
                                       }
                                    ]
                                 }
                              ]
                           },
                           "stat_prefix": "direct-pachd-oidc",
                           "stream_idle_timeout": "86400s",
                           "use_remote_address": true
                        }
                     }
                  ],
                  "transport_socket": {
                     "name": "envoy.transport_sockets.tap",
                     "typed_config": {
                        "@type": "type.googleapis.com/envoy.extensions.transport_sockets.tap.v3.Tap",
                        "common_config": {
                           "admin_config": {
                              "config_id": "tap-listener-direct-pachd-oidc"
                           }
                        },
                        "transport_socket": {
                           "name": "envoy.transport_sockets.raw_buffer",
                           "typed_config": {
                              "@type": "type.googleapis.com/envoy.extensions.transport_sockets.raw_buffer.v3.RawBuffer"
                           }
                        }
                     }
                  }
               }
            ],
            "name": "direct-pachd-oidc",
            "per_connection_buffer_limit_bytes": 32768,
            "traffic_direction": "INBOUND"
         },
         {
            "access_log": [
               {
                  "name": "envoy.access_loggers.stdout",
                  "typed_config": {
                     "@type": "type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StderrAccessLog",
                     "log_format": {
                        "json_format": {
                           "authority": "%REQ(authority)%",
                           "connection_id": "%CONNECTION_ID%",
                           "connection_termination_details": "%CONNECTION_TERMINATION_DETAILS%",
                           "downstream_remote_address": "%DOWNSTREAM_DIRECT_REMOTE_ADDRESS_WITHOUT_PORT%",
                           "duration_ms": "%DURATION%",
                           "grpc_message": "%RESP(GRPC-MESSAGE):64%",
                           "grpc_status_code": "%GRPC_STATUS(SNAKE_STRING)%",
                           "listener": "direct-pachd-identity",
                           "message": "listener log",
                           "method": "%REQ(:method)%",
                           "pachctl_command": "%REQ(COMMAND):64%",
                           "path": "%REQ(X-ENVOY-ORIGINAL-PATH?:PATH)%",
                           "protocol": "%PROTOCOL%",
                           "request_attempt_count": "%UPSTREAM_REQUEST_ATTEMPT_COUNT%",
                           "request_headers_bytes": "%REQUEST_HEADERS_BYTES%",
                           "response_code": "%RESPONSE_CODE%",
                           "response_code_details": "%RESPONSE_CODE_DETAILS%",
                           "response_flags": "%RESPONSE_FLAGS%",
                           "route": "%ROUTE_NAME%",
                           "rx_bytes": "%BYTES_RECEIVED%",
                           "severity": "info",
                           "stream_id": "%STREAM_ID%",
                           "timestamp": "%START_TIME%",
                           "tx_bytes": "%BYTES_SENT%",
                           "upgrade": "%RESP(UPGRADE)%",
                           "upstream": "%UPSTREAM_CLUSTER%",
                           "upstream_host": "%UPSTREAM_HOST%",
                           "upstream_local_address": "%UPSTREAM_LOCAL_ADDRESS%",
                           "upstream_protocol": "%UPSTREAM_PROTOCOL%",
                           "upstream_service_time_ms": "%RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)%",
                           "user_agent": "%REQ(USER-AGENT)%",
                           "x-request-id": "%REQ(X-REQUEST-ID)%",
                           "xff": "%REQ(X-FORWARDED-FOR)%"
                        },
                        "omit_empty_values": true
                     }
                  }
               }
            ],
            "address": {
               "socket_address": {
                  "address": "0.0.0.0",
                  "port_value": 1658
               }
            },
            "filter_chains": [
               {
                  "filters": [
                     {
                        "name": "envoy.http_connection_manager",
                        "typed_config": {
                           "@type": "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager",
                           "access_log": [
                              {
                                 "name": "envoy.access_loggers.stdout",
                                 "typed_config": {
                                    "@type": "type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog",
                                    "log_format": {
                                       "json_format": {
                                          "authority": "%REQ(authority)%",
                                          "connection_id": "%CONNECTION_ID%",
                                          "connection_termination_details": "%CONNECTION_TERMINATION_DETAILS%",
                                          "downstream_remote_address": "%DOWNSTREAM_DIRECT_REMOTE_ADDRESS_WITHOUT_PORT%",
                                          "duration_ms": "%DURATION%",
                                          "grpc_message": "%RESP(GRPC-MESSAGE):64%",
                                          "grpc_status_code": "%GRPC_STATUS(SNAKE_STRING)%",
                                          "message": "http response",
                                          "method": "%REQ(:method)%",
                                          "pachctl_command": "%REQ(COMMAND):64%",
                                          "path": "%REQ(X-ENVOY-ORIGINAL-PATH?:PATH)%",
                                          "protocol": "%PROTOCOL%",
                                          "request_attempt_count": "%UPSTREAM_REQUEST_ATTEMPT_COUNT%",
                                          "request_headers_bytes": "%REQUEST_HEADERS_BYTES%",
                                          "response_code": "%RESPONSE_CODE%",
                                          "response_code_details": "%RESPONSE_CODE_DETAILS%",
                                          "response_flags": "%RESPONSE_FLAGS%",
                                          "route": "%ROUTE_NAME%",
                                          "rx_bytes": "%BYTES_RECEIVED%",
                                          "severity": "info",
                                          "stream_id": "%STREAM_ID%",
                                          "timestamp": "%START_TIME%",
                                          "tx_bytes": "%BYTES_SENT%",
                                          "upgrade": "%RESP(UPGRADE)%",
                                          "upstream": "%UPSTREAM_CLUSTER%",
                                          "upstream_host": "%UPSTREAM_HOST%",
                                          "upstream_local_address": "%UPSTREAM_LOCAL_ADDRESS%",
                                          "upstream_protocol": "%UPSTREAM_PROTOCOL%",
                                          "upstream_service_time_ms": "%RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)%",
                                          "user_agent": "%REQ(USER-AGENT)%",
                                          "x-request-id": "%REQ(X-REQUEST-ID)%",
                                          "xff": "%REQ(X-FORWARDED-FOR)%"
                                       },
                                       "omit_empty_values": true
                                    }
                                 }
                              }
                           ],
                           "codec_type": "auto",
                           "common_http_protocol_options": {
                              "headers_with_underscores_action": "REJECT_REQUEST",
                              "idle_timeout": "86400s"
                           },
                           "http2_protocol_options": {
                              "initial_connection_window_size": 1048576,
                              "initial_stream_window_size": 524288,
                              "max_concurrent_streams": 100
                           },
                           "http_filters": [
                              {
                                 "name": "envoy.filters.http.tap",
                                 "typed_config": {
                                    "@type": "type.googleapis.com/envoy.extensions.filters.http.tap.v3.Tap",
                                    "common_config": {
                                       "admin_config": {
                                          "config_id": "tap-http-direct-pachd-identity"
                                       }
                                    }
                                 }
                              },
                              {
                                 "name": "envoy.filters.http.router",
                                 "typed_config": {
                                    "@type": "type.googleapis.com/envoy.extensions.filters.http.router.v3.Router"
                                 }
                              }
                           ],
                           "http_protocol_options": {
                              "accept_http_10": false
                           },
                           "request_timeout": "604800s",
                           "route_config": {
                              "virtual_hosts": [
                                 {
                                    "domains": [
                                       "*"
                                    ],
                                    "name": "any",
                                    "retry_policy": {
                                       "host_selection_retry_max_attempts": 4,
                                       "num_retries": 4,
                                       "retry_on": "connect-failure"
                                    },
                                    "routes": [
                                       {
                                          "match": {
                                             "prefix": "/dex"
                                          },
                                          "route": {
                                             "cluster": "pachd-identity",
                                             "idle_timeout": "60s",
                                             "timeout": "60s"
                                          }
                                       }
                                    ]
                                 }
                              ]
                           },
                           "stat_prefix": "direct-pachd-identity",
                           "stream_idle_timeout": "86400s",
                           "use_remote_address": true
                        }
                     }
                  ],
                  "transport_socket": {
                     "name": "envoy.transport_sockets.tap",
                     "typed_config": {
                        "@type": "type.googleapis.com/envoy.extensions.transport_sockets.tap.v3.Tap",
                        "common_config": {
                           "admin_config": {
                              "config_id": "tap-listener-direct-pachd-identity"
                           }
                        },
                        "transport_socket": {
                           "name": "envoy.transport_sockets.raw_buffer",
                           "typed_config": {
                              "@type": "type.googleapis.com/envoy.extensions.transport_sockets.raw_buffer.v3.RawBuffer"
                           }
                        }
                     }
                  }
               }
            ],
            "name": "direct-pachd-identity",
            "per_connection_buffer_limit_bytes": 32768,
            "traffic_direction": "INBOUND"
         },
         {
            "access_log": [
               {
                  "name": "envoy.access_loggers.stdout",
                  "typed_config": {
                     "@type": "type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StderrAccessLog",
                     "log_format": {
                        "json_format": {
                           "authority": "%REQ(authority)%",
                           "connection_id": "%CONNECTION_ID%",
                           "connection_termination_details": "%CONNECTION_TERMINATION_DETAILS%",
                           "downstream_remote_address": "%DOWNSTREAM_DIRECT_REMOTE_ADDRESS_WITHOUT_PORT%",
                           "duration_ms": "%DURATION%",
                           "grpc_message": "%RESP(GRPC-MESSAGE):64%",
                           "grpc_status_code": "%GRPC_STATUS(SNAKE_STRING)%",
                           "listener": "direct-pachd-archive",
                           "message": "listener log",
                           "method": "%REQ(:method)%",
                           "pachctl_command": "%REQ(COMMAND):64%",
                           "path": "%REQ(X-ENVOY-ORIGINAL-PATH?:PATH)%",
                           "protocol": "%PROTOCOL%",
                           "request_attempt_count": "%UPSTREAM_REQUEST_ATTEMPT_COUNT%",
                           "request_headers_bytes": "%REQUEST_HEADERS_BYTES%",
                           "response_code": "%RESPONSE_CODE%",
                           "response_code_details": "%RESPONSE_CODE_DETAILS%",
                           "response_flags": "%RESPONSE_FLAGS%",
                           "route": "%ROUTE_NAME%",
                           "rx_bytes": "%BYTES_RECEIVED%",
                           "severity": "info",
                           "stream_id": "%STREAM_ID%",
                           "timestamp": "%START_TIME%",
                           "tx_bytes": "%BYTES_SENT%",
                           "upgrade": "%RESP(UPGRADE)%",
                           "upstream": "%UPSTREAM_CLUSTER%",
                           "upstream_host": "%UPSTREAM_HOST%",
                           "upstream_local_address": "%UPSTREAM_LOCAL_ADDRESS%",
                           "upstream_protocol": "%UPSTREAM_PROTOCOL%",
                           "upstream_service_time_ms": "%RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)%",
                           "user_agent": "%REQ(USER-AGENT)%",
                           "x-request-id": "%REQ(X-REQUEST-ID)%",
                           "xff": "%REQ(X-FORWARDED-FOR)%"
                        },
                        "omit_empty_values": true
                     }
                  }
               }
            ],
            "address": {
               "socket_address": {
                  "address": "0.0.0.0",
                  "port_value": 1659
               }
            },
            "filter_chains": [
               {
                  "filters": [
                     {
                        "name": "envoy.http_connection_manager",
                        "typed_config": {
                           "@type": "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager",
                           "access_log": [
                              {
                                 "name": "envoy.access_loggers.stdout",
                                 "typed_config": {
                                    "@type": "type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog",
                                    "log_format": {
                                       "json_format": {
                                          "authority": "%REQ(authority)%",
                                          "connection_id": "%CONNECTION_ID%",
                                          "connection_termination_details": "%CONNECTION_TERMINATION_DETAILS%",
                                          "downstream_remote_address": "%DOWNSTREAM_DIRECT_REMOTE_ADDRESS_WITHOUT_PORT%",
                                          "duration_ms": "%DURATION%",
                                          "grpc_message": "%RESP(GRPC-MESSAGE):64%",
                                          "grpc_status_code": "%GRPC_STATUS(SNAKE_STRING)%",
                                          "message": "http response",
                                          "method": "%REQ(:method)%",
                                          "pachctl_command": "%REQ(COMMAND):64%",
                                          "path": "%REQ(X-ENVOY-ORIGINAL-PATH?:PATH)%",
                                          "protocol": "%PROTOCOL%",
                                          "request_attempt_count": "%UPSTREAM_REQUEST_ATTEMPT_COUNT%",
                                          "request_headers_bytes": "%REQUEST_HEADERS_BYTES%",
                                          "response_code": "%RESPONSE_CODE%",
                                          "response_code_details": "%RESPONSE_CODE_DETAILS%",
                                          "response_flags": "%RESPONSE_FLAGS%",
                                          "route": "%ROUTE_NAME%",
                                          "rx_bytes": "%BYTES_RECEIVED%",
                                          "severity": "info",
                                          "stream_id": "%STREAM_ID%",
                                          "timestamp": "%START_TIME%",
                                          "tx_bytes": "%BYTES_SENT%",
                                          "upgrade": "%RESP(UPGRADE)%",
                                          "upstream": "%UPSTREAM_CLUSTER%",
                                          "upstream_host": "%UPSTREAM_HOST%",
                                          "upstream_local_address": "%UPSTREAM_LOCAL_ADDRESS%",
                                          "upstream_protocol": "%UPSTREAM_PROTOCOL%",
                                          "upstream_service_time_ms": "%RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)%",
                                          "user_agent": "%REQ(USER-AGENT)%",
                                          "x-request-id": "%REQ(X-REQUEST-ID)%",
                                          "xff": "%REQ(X-FORWARDED-FOR)%"
                                       },
                                       "omit_empty_values": true
                                    }
                                 }
                              }
                           ],
                           "codec_type": "auto",
                           "common_http_protocol_options": {
                              "headers_with_underscores_action": "REJECT_REQUEST",
                              "idle_timeout": "86400s"
                           },
                           "http2_protocol_options": {
                              "initial_connection_window_size": 1048576,
                              "initial_stream_window_size": 524288,
                              "max_concurrent_streams": 100
                           },
                           "http_filters": [
                              {
                                 "name": "envoy.filters.http.tap",
                                 "typed_config": {
                                    "@type": "type.googleapis.com/envoy.extensions.filters.http.tap.v3.Tap",
                                    "common_config": {
                                       "admin_config": {
                                          "config_id": "tap-http-direct-pachd-archive"
                                       }
                                    }
                                 }
                              },
                              {
                                 "name": "envoy.filters.http.router",
                                 "typed_config": {
                                    "@type": "type.googleapis.com/envoy.extensions.filters.http.router.v3.Router"
                                 }
                              }
                           ],
                           "http_protocol_options": {
                              "accept_http_10": false
                           },
                           "request_timeout": "604800s",
                           "route_config": {
                              "virtual_hosts": [
                                 {
                                    "domains": [
                                       "*"
                                    ],
                                    "name": "any",
                                    "retry_policy": {
                                       "host_selection_retry_max_attempts": 4,
                                       "num_retries": 4,
                                       "retry_on": "connect-failure"
                                    },
                                    "routes": [
                                       {
                                          "match": {
                                             "prefix": "/archive"
                                          },
                                          "route": {
                                             "cluster": "pachd-archive",
                                             "idle_timeout": "600s",
                                             "timeout": "604800s"
                                          }
                                       }
                                    ]
                                 }
                              ]
                           },
                           "stat_prefix": "direct-pachd-archive",
                           "stream_idle_timeout": "86400s",
                           "use_remote_address": true
                        }
                     }
                  ],
                  "transport_socket": {
                     "name": "envoy.transport_sockets.tap",
                     "typed_config": {
                        "@type": "type.googleapis.com/envoy.extensions.transport_sockets.tap.v3.Tap",
                        "common_config": {
                           "admin_config": {
                              "config_id": "tap-listener-direct-pachd-archive"
                           }
                        },
                        "transport_socket": {
                           "name": "envoy.transport_sockets.raw_buffer",
                           "typed_config": {
                              "@type": "type.googleapis.com/envoy.extensions.transport_sockets.raw_buffer.v3.RawBuffer"
                           }
                        }
                     }
                  }
               }
            ],
            "name": "direct-pachd-archive",
            "per_connection_buffer_limit_bytes": 32768,
            "traffic_direction": "INBOUND"
         },
         {
            "access_log": [
               {
                  "name": "envoy.access_loggers.stdout",
                  "typed_config": {
                     "@type": "type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StderrAccessLog",
                     "log_format": {
                        "json_format": {
                           "authority": "%REQ(authority)%",
                           "connection_id": "%CONNECTION_ID%",
                           "connection_termination_details": "%CONNECTION_TERMINATION_DETAILS%",
                           "downstream_remote_address": "%DOWNSTREAM_DIRECT_REMOTE_ADDRESS_WITHOUT_PORT%",
                           "duration_ms": "%DURATION%",
                           "grpc_message": "%RESP(GRPC-MESSAGE):64%",
                           "grpc_status_code": "%GRPC_STATUS(SNAKE_STRING)%",
                           "listener": "direct-console",
                           "message": "listener log",
                           "method": "%REQ(:method)%",
                           "pachctl_command": "%REQ(COMMAND):64%",
                           "path": "%REQ(X-ENVOY-ORIGINAL-PATH?:PATH)%",
                           "protocol": "%PROTOCOL%",
                           "request_attempt_count": "%UPSTREAM_REQUEST_ATTEMPT_COUNT%",
                           "request_headers_bytes": "%REQUEST_HEADERS_BYTES%",
                           "response_code": "%RESPONSE_CODE%",
                           "response_code_details": "%RESPONSE_CODE_DETAILS%",
                           "response_flags": "%RESPONSE_FLAGS%",
                           "route": "%ROUTE_NAME%",
                           "rx_bytes": "%BYTES_RECEIVED%",
                           "severity": "info",
                           "stream_id": "%STREAM_ID%",
                           "timestamp": "%START_TIME%",
                           "tx_bytes": "%BYTES_SENT%",
                           "upgrade": "%RESP(UPGRADE)%",
                           "upstream": "%UPSTREAM_CLUSTER%",
                           "upstream_host": "%UPSTREAM_HOST%",
                           "upstream_local_address": "%UPSTREAM_LOCAL_ADDRESS%",
                           "upstream_protocol": "%UPSTREAM_PROTOCOL%",
                           "upstream_service_time_ms": "%RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)%",
                           "user_agent": "%REQ(USER-AGENT)%",
                           "x-request-id": "%REQ(X-REQUEST-ID)%",
                           "xff": "%REQ(X-FORWARDED-FOR)%"
                        },
                        "omit_empty_values": true
                     }
                  }
               }
            ],
            "address": {
               "socket_address": {
                  "address": "0.0.0.0",
                  "port_value": 4000
               }
            },
            "filter_chains": [
               {
                  "filters": [
                     {
                        "name": "envoy.http_connection_manager",
                        "typed_config": {
                           "@type": "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager",
                           "access_log": [
                              {
                                 "name": "envoy.access_loggers.stdout",
                                 "typed_config": {
                                    "@type": "type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog",
                                    "log_format": {
                                       "json_format": {
                                          "authority": "%REQ(authority)%",
                                          "connection_id": "%CONNECTION_ID%",
                                          "connection_termination_details": "%CONNECTION_TERMINATION_DETAILS%",
                                          "downstream_remote_address": "%DOWNSTREAM_DIRECT_REMOTE_ADDRESS_WITHOUT_PORT%",
                                          "duration_ms": "%DURATION%",
                                          "grpc_message": "%RESP(GRPC-MESSAGE):64%",
                                          "grpc_status_code": "%GRPC_STATUS(SNAKE_STRING)%",
                                          "message": "http response",
                                          "method": "%REQ(:method)%",
                                          "pachctl_command": "%REQ(COMMAND):64%",
                                          "path": "%REQ(X-ENVOY-ORIGINAL-PATH?:PATH)%",
                                          "protocol": "%PROTOCOL%",
                                          "request_attempt_count": "%UPSTREAM_REQUEST_ATTEMPT_COUNT%",
                                          "request_headers_bytes": "%REQUEST_HEADERS_BYTES%",
                                          "response_code": "%RESPONSE_CODE%",
                                          "response_code_details": "%RESPONSE_CODE_DETAILS%",
                                          "response_flags": "%RESPONSE_FLAGS%",
                                          "route": "%ROUTE_NAME%",
                                          "rx_bytes": "%BYTES_RECEIVED%",
                                          "severity": "info",
                                          "stream_id": "%STREAM_ID%",
                                          "timestamp": "%START_TIME%",
                                          "tx_bytes": "%BYTES_SENT%",
                                          "upgrade": "%RESP(UPGRADE)%",
                                          "upstream": "%UPSTREAM_CLUSTER%",
                                          "upstream_host": "%UPSTREAM_HOST%",
                                          "upstream_local_address": "%UPSTREAM_LOCAL_ADDRESS%",
                                          "upstream_protocol": "%UPSTREAM_PROTOCOL%",
                                          "upstream_service_time_ms": "%RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)%",
                                          "user_agent": "%REQ(USER-AGENT)%",
                                          "x-request-id": "%REQ(X-REQUEST-ID)%",
                                          "xff": "%REQ(X-FORWARDED-FOR)%"
                                       },
                                       "omit_empty_values": true
                                    }
                                 }
                              }
                           ],
                           "codec_type": "auto",
                           "common_http_protocol_options": {
                              "headers_with_underscores_action": "REJECT_REQUEST",
                              "idle_timeout": "86400s"
                           },
                           "http2_protocol_options": {
                              "initial_connection_window_size": 1048576,
                              "initial_stream_window_size": 524288,
                              "max_concurrent_streams": 100
                           },
                           "http_filters": [
                              {
                                 "name": "envoy.filters.http.tap",
                                 "typed_config": {
                                    "@type": "type.googleapis.com/envoy.extensions.filters.http.tap.v3.Tap",
                                    "common_config": {
                                       "admin_config": {
                                          "config_id": "tap-http-direct-console"
                                       }
                                    }
                                 }
                              },
                              {
                                 "name": "envoy.filters.http.router",
                                 "typed_config": {
                                    "@type": "type.googleapis.com/envoy.extensions.filters.http.router.v3.Router"
                                 }
                              }
                           ],
                           "http_protocol_options": {
                              "accept_http_10": false
                           },
                           "request_timeout": "604800s",
                           "route_config": {
                              "virtual_hosts": [
                                 {
                                    "domains": [
                                       "*"
                                    ],
                                    "name": "any",
                                    "retry_policy": {
                                       "host_selection_retry_max_attempts": 4,
                                       "num_retries": 4,
                                       "retry_on": "connect-failure"
                                    },
                                    "routes": [
                                       {
                                          "match": {
                                             "prefix": "/"
                                          },
                                          "route": {
                                             "cluster": "console",
                                             "idle_timeout": "600s",
                                             "timeout": "3600s",
                                             "upgrade_configs": [
                                                {
                                                   "enabled": true,
                                                   "upgrade_type": "websocket"
                                                }
                                             ]
                                          }
                                       }
                                    ]
                                 }
                              ]
                           },
                           "stat_prefix": "direct-console",
                           "stream_idle_timeout": "86400s",
                           "use_remote_address": true
                        }
                     }
                  ],
                  "transport_socket": {
                     "name": "envoy.transport_sockets.tap",
                     "typed_config": {
                        "@type": "type.googleapis.com/envoy.extensions.transport_sockets.tap.v3.Tap",
                        "common_config": {
                           "admin_config": {
                              "config_id": "tap-listener-direct-console"
                           }
                        },
                        "transport_socket": {
                           "name": "envoy.transport_sockets.raw_buffer",
                           "typed_config": {
                              "@type": "type.googleapis.com/envoy.extensions.transport_sockets.raw_buffer.v3.RawBuffer"
                           }
                        }
                     }
                  }
               }
            ],
            "name": "direct-console",
            "per_connection_buffer_limit_bytes": 32768,
            "traffic_direction": "INBOUND"
         }
      ]
   }
}
